--- a/Jobsity.Challenge.FinancialChat.Web/index.html
+++ b/Jobsity.Challenge.FinancialChat.Web/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container info_chat" style="display:none;">
         <div class="chats">
             <header>
                 <div class="userAvatar">
                 </div>
-                <button id="addNewGroup" onclick="createChatRoom()" style="display:none;">New Chatroom</button>
+                <button id="addNewGroup" onclick="createChatRoom()">New Chatroom</button>
             </header>
             <div class="rooms">
             </div>
